fixing the footer on mobile

--- a/client/styles/less/styles.less
+++ b/client/styles/less/styles.less
@@ -214,7 +214,7 @@ a {
 	border-bottom: 1px solid @border-color;
 
 	span {
-		vertical-align: middle;
+		line-height: @header-height;
 	}
 
 	i {
@@ -230,6 +230,21 @@ a {
 		vertical-align: middle;
 		margin-left: 30px;
 		opacity: 0.8;
+	}
+}
+
+// special handling for font sizes on mobile
+@media (max-width: @screen-xxs-max) {
+	.footer {
+		font-size: 14px; font-size: 1.4rem;
+
+		a {
+			font-size: 16px; font-size: 1.6rem;
+		}
+
+		.footer-icon-image {
+			margin-left: 8px; margin-left: .8rem;
+		}
 	}
 }
 
